--- a/CornerKitchen/Base.lproj/Main.storyboard
+++ b/CornerKitchen/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="mv8-Ar-CI5">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -567,7 +567,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="SIe-5S-iWo">
             <objects>
-                <tabBarController id="o1E-cr-Raw" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="USER_MAIN" id="o1E-cr-Raw" sceneMemberID="viewController">
                     <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="eTm-Ss-SAb">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
