--- a/CornerKitchen/Base.lproj/Main.storyboard
+++ b/CornerKitchen/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="mv8-Ar-CI5">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -406,7 +406,7 @@
                     <navigationItem key="navigationItem" title="Corner Kitchen" id="TJw-f3-g3v"/>
                     <connections>
                         <outlet property="contentScroll" destination="XGJ-dY-B1k" id="cKX-Aq-QpB"/>
-                        <segue destination="mv8-Ar-CI5" kind="modal" identifier="EDIT_TRUCK_LOGGED" id="hIm-oS-lac"/>
+                        <segue destination="mv8-Ar-CI5" kind="modal" identifier="EDIT_TRUCK_LOGGED" modalTransitionStyle="crossDissolve" id="hIm-oS-lac"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="slX-eZ-mqr" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -443,7 +443,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ayK-dg-kOr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2072" y="590"/>
+            <point key="canvasLocation" x="2076" y="725"/>
         </scene>
         <!--Corner Kitchen-->
         <scene sceneID="zLe-d9-z7U">
