setting up menue editing

--- a/CornerKitchen/Base.lproj/Main.storyboard
+++ b/CornerKitchen/Base.lproj/Main.storyboard
@@ -676,6 +676,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="AAk-Uu-ijM"/>
+        <segue reference="hIm-oS-lac"/>
     </inferredMetricsTieBreakers>
 </document>
